--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ install:
   - pip install -q Django==$DJANGO --use-mirrors
   - pip install -q django-nose --use-mirrors
   - pip install -q pylint --use-mirrors
+  - pip install -q pep8 --use-mirrors
   - pip install -q pinax.checkers --use-mirrors
   - pip install -e . --use-mirrors
 before_script:
-  - "pylint --rcfile=.pylintrc notification"
+  - lint.sh
 script:
   - python runtests.py
